<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Signing Demo Application</string>
    <string name="listFilesActivityName">Please select a file</string>
    <string name="listIdentitiesActivityName">Please select digital identity</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="installIdentity">Install Identity</string>
    <string name="testSigning">Test Signing</string>
    <string name="testXmlSigning">Test XML Signing (doc in intent)</string>
    <string name="testXmlSigningUrl">Test XML Signing (doc url)</string>
    <string name="testDefaultUrl">http://192.168.1.92/tmp/societies/doc.xml</string>
    <string name="testVerification">Test Verification</string>
    <string name="isRequestingToSign">is requesting to sign a document. Allow?</string>
    <string name="unknownApp">Unknown app</string>
</resources>
