<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewSignIsRequestingToSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isRequestingToSign" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

	    <Button
	        android:id="@+id/buttonSignOk"
	        android:layout_width="0px"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/ok" />
        
        <Button
            android:id="@+id/buttonSignCancel"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>
